--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
-    "autoprefixer": "^10.4.17",
-    "hardhat": "^2.12.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "hardhat": "^2.12.0"
   }
 }
